Refine about page layout
- add images, fix layout design

--- a/pages/about.html
+++ b/pages/about.html
@@ -41,8 +41,8 @@
         <div class="about-container">
             <div>
                 <h1 class="page-heading">About Us</h1>
-                <p class="main-subheading-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>   
-                <a class="main-button" href="#Gallery">Our Gallery<i class="fas fa-angle-down"></i></a>
+                <p class="main-subheading-light">Learn more about our story </p>   
+                <a class="main-button" href="#gallery">Our Gallery<i class="fas fa-angle-down"></i></a>
             </div>
         </div>
     </section>
@@ -57,13 +57,12 @@
                 </div>
             </div>
             <div class="position-relative">
-                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+                <img class="img-fluid" src="../assets/about-image-three.jpg">
                 <div class="skew-right"></div>
             </div>
         </div>
         <div class="about-info-container-two">
-            <div class="position-relative">
-                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+            <div class="position-relative about-image-two">
                 <div class="skew-left"></div>
             </div>
             <div class="about-info container">
@@ -78,14 +77,12 @@
                     <p class="main-subheading margin-bottom-one">After strolling many years in nightclubs and restaurants, he realized the type of magic that he wants to bring to the world! “Magic that is visual, daring, and that makes people smile, is something I strives for. I do my best to produce original material, or at least put my own twist on effects that may be similar to what I am doing”. </p>
                 </div>
             </div>
-            <div class="position-relative">
-                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+            <div class="position-relative" style="background-image:url(../assets/about-image-four.jpg); height: 600px;">
                 <div class="skew-right"></div>
             </div>
         </div>
         <div class="about-info-container-two">
-            <div class="position-relative">
-                <img class="img-fluid" src="https://instagram.fykz1-1.fna.fbcdn.net/v/t51.2885-15/e35/54446813_2191224517582332_9008173078773137776_n.jpg?_nc_ht=instagram.fykz1-1.fna.fbcdn.net&_nc_cat=100&_nc_ohc=x9QZr8b_zQYAX8ldwGI&oh=3142b06be2f23dc4b904b5485166be4b&oe=5E8CDF9D">
+            <div class="position-relative about-image-four">
                 <div class="skew-left"></div>
             </div>
             <div class="about-info container">
@@ -101,27 +98,24 @@
         <div class="gallery-container">
             <div class="gallery-header">
                 <h2 class="main-heading">Our Gallery</h2>
-                <p class="main-subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <p class="main-subheading">Take a look at our gallery down below.</p>
                 <i class="fas fa-chevron-down"></i>
             </div>
             <div class="gallery">
                 <div class="gallery-column">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/531321/pexels-photo-531321.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/1666021/pexels-photo-1666021.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/1131458/pexels-photo-1131458.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/92933/pexels-photo-92933.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-one.jpg">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-four.jpg">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-seven.jpg">
                 </div>
                 <div class="gallery-column">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/459319/pexels-photo-459319.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/1407305/pexels-photo-1407305.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/994605/pexels-photo-994605.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/1679772/pexels-photo-1679772.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-two.jpg">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-five.jpg">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-eight.jpg">
                 </div>
                 <div class="gallery-column">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/572861/pexels-photo-572861.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/127513/pexels-photo-127513.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/92933/pexels-photo-92933.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/417173/pexels-photo-417173.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-three.jpg">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-six.jpg">
+                    <img class="img-fluid" src="../assets/gallery/gallery-image-nine.jpg">
                 </div>
             </div>
         </div>
@@ -131,7 +125,7 @@
         <div class="footer-container">
             <div class="footer-about">
                 <h3 class="footer-title">Raman Illusions</h3>
-                <p class="footer-about-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum beatae eius dignissimos veniam. Pariatur illum beatae eius dignissimos veniam.</p>
+                <p class="footer-about-subtitle">Raman Sharma is an International illusionist who has performed around the globe. His unique and creative style of magic has allowed him to entertain some of the biggest multinational companies in the world.</p>
                 <div class="footer-social-media">
                         <i class="footer-social-media-icon fab fa-facebook-f"></i>
                         <i class="footer-social-media-icon fab fa-instagram"></i>
