--- a/pages/contact.html
+++ b/pages/contact.html
@@ -89,7 +89,7 @@
         <div class="footer-container">
             <div class="footer-about">
                 <h3 class="footer-title">Raman Illusions</h3>
-                <p class="footer-about-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur illum beatae eius dignissimos veniam. Pariatur illum beatae eius dignissimos veniam.</p>
+                <p class="footer-about-subtitle">Raman Sharma is an International illusionist who has performed around the globe. His unique and creative style of magic has allowed him to entertain some of the biggest multinational companies in the world.</p>
                 <div class="footer-social-media">
                         <i class="footer-social-media-icon fab fa-facebook-f"></i>
                         <i class="footer-social-media-icon fab fa-instagram"></i>
