Fix skews on homepage layout

--- a/index.html
+++ b/index.html
@@ -80,16 +80,18 @@
                     <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
                 </div>
             </div>
-            <div class="show-video-content">
+            <div class="show-video-content position-relative">
                 <video autoplay muted loop class="walk-around-video">
                         <source src="assets/walk-around-magic.mp4" type="video/mp4"> 
                 </video>
                 <div class="show-video-overlay"></div>
+                <div class="skew-one"></div>
             </div>
         </div>
         <div class="shows-container-three">
-            <div>
+            <div class="position-relative">
                 <img class="shows-image" src="assets/crowd-participating-at-event.jpg">
+                <div class="skew-two"></div>
             </div>
             <div class="shows-content">
                 <div class="shows-content-inner">
@@ -107,8 +109,9 @@
                         <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
-                <div>
+                <div class="position-relative">
                     <img class="shows-image" src="assets/dove.jpeg">
+                    <div class="skew-one"></div>
                 </div>
         </div>
     </section>
@@ -130,7 +133,7 @@
                 </div>
                 <div class="featured-video-info-two">
                     <h3 class="main-heading-small">Making a Photograph Come to Life</h3>
-                    <a class="secondary-button-two" href="">My YouTube<i class="fas fa-angle-right"></i></a>
+                    <a class="secondary-button-two" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">My YouTube<i class="fas fa-angle-right"></i></a>
                 </div>
                 <div>
                     <iframe class="featured-work-two" width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
