Style our works page

--- a/pages/work.html
+++ b/pages/work.html
@@ -36,14 +36,29 @@
             </ul>
         </div>
     </nav> 
-    <!-- about page header -->
-    <section class="about-header">
-        <div class="about-container">
+    <!-- work page header -->
+    <section class="work-header">
+        <div class="work-container">
             <div>
-                <h1 class="page-heading">About Us</h1>
-                <p class="main-subheading-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </p>   
-                <a class="main-button" href="#gallery">Our Gallery<i class="fas fa-angle-down"></i></a>
+                <h1 class="page-heading">Our Work</h1>
+                <p class="main-subheading-light">Feel free to check out our latest works down below.</p>   
+                <a class="main-button" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">YouTube Channel<i class="fas fa-angle-right"></i></a>
             </div>
+        </div>
+    </section>
+    <!-- work page videos -->
+    <section>
+        <div class="our-works">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FHBUaoid1ss" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/WBlrETm9Ato" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/HzU2EU4Rdsg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0npVUMi_Ux0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NZNZWtGo3CI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/IlPIIFVG3mc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/jLlvhKnh9Y8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qk-3V1AVIvM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7FWt_yAyfVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/3Qsq-SZ9FBU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </section>
     <!-- footer -->
