Style first section on shows page

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -41,8 +41,27 @@
         <div class="show-container">
             <div>
                 <h1 class="page-heading">Our Shows</h1>
-                <p class="main-subheading-light">Feel free to check out our show plans below.</p>   
-                <a class="main-button" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">More Details<i class="fas fa-angle-down"></i></a>
+                <p class="main-subheading-light">Find out which show is right for you.</p>   
+                <a class="main-button" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">Pricing<i class="fas fa-angle-down"></i></a>
+            </div>
+        </div>
+    </section>
+    <!-- our shows -->
+    <section>
+        <div class="show-one-title">
+            <h2 class="main-heading">Walk Around Magic</h2>
+            <a class="secondary-button-two" href="">Pricing<i class="fas fa-angle-down"></i></a>
+        </div>
+        <div class="show-one">
+            <div>
+                <p class="main-subheading">Is the most interactive type of magic as it involves pure sleight of hand. This form of magic is the most difficult type as you are literally performing inches away from your audience. From cards to everyday objects like coins, rubber bands and cigarettes, close up magic is truly a skill that takes many years to master. Perfect for Night Clubs, Restaurants, and Cocktail hours at weddings. It is also the best way to break the ice with any strangers at your business functions, as everyone bonds together.</p>
+            </div>
+            <div class="show-video-content position-relative">
+                <video autoplay muted loop class="walk-around-video">
+                        <source src="../assets/walk-around-magic.mp4" type="video/mp4"> 
+                </video>
+                <div class="show-video-overlay"></div>
+                <div class="skew-right"></div>
             </div>
         </div>
     </section>
