add styles to shows page

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -64,6 +64,14 @@
                 <div class="skew-right"></div>
             </div>
         </div>
+        <div class="show-two">
+            <div>
+                
+            </div>
+            <div>
+                
+            </div>
+        </div>
     </section>
     <!-- footer -->
     <footer>
