--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/about.html">About</a>
+                        <a class="nav-link" href="pages/about">About</a>
                 </li>
                 <li class="nav-item">
                         <a class="nav-link" href="pages/shows.html">Shows</a>
@@ -157,7 +157,7 @@
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="/pages/about.html">About</a></li>
+                    <li><a href="/pages/about">About</a></li>
                     <li><a href="/pages/shows.html">Shows</a></li>
                     <li><a href="/pages/work.html">Work</a></li>
                     <li><a href="/pages/contact.html">Contact</a></li>
