remove .html extension from all links

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                         <a class="nav-link" href="pages/about">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/shows.html">Shows</a>
+                        <a class="nav-link" href="pages/shows">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/work.html">Work</a>
+                        <a class="nav-link" href="pages/work">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/contact.html">Contact</a>
+                        <a class="nav-link" href="pages/contact">Contact</a>
                 </li>                                   
             </ul>
         </div>
@@ -58,7 +58,7 @@
             <div class="about-content-inner">
                 <h2 class="main-heading">About Us</h2>
                 <p class="about-content-subtitle"> Raman Is an Illusionist who is determined to create his own brand of magic! From sleight of hand to large illusions, he wants to be an innovator in this ancient art. </p>
-                <a class="secondary-button-two" href="pages/about.html">Read More<i class="fas fa-angle-right"></i></a>
+                <a class="secondary-button-two" href="pages/about">Read More<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
         <div class="about-background-two"></div>
@@ -129,7 +129,7 @@
                 <div class="featured-video-info-one">
                     <h3 class="main-heading-small">Monday Magic</h3>
                     <p class="main-subheading"> Depressed for the start of the work week? Hope this will add a bit of colour to it. </p>            
-                    <a class="secondary-button-two" href="pages/work.html">See More Projects<i class="fas fa-angle-right"></i></a>
+                    <a class="secondary-button-two" href="pages/work">See More Projects<i class="fas fa-angle-right"></i></a>
                 </div>
                 <div class="featured-video-info-two">
                     <h3 class="main-heading-small">Making a Photograph Come to Life</h3>
@@ -156,11 +156,11 @@
             <div class="footer-pages">
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index">Home</a></li>
                     <li><a href="/pages/about">About</a></li>
-                    <li><a href="/pages/shows.html">Shows</a></li>
-                    <li><a href="/pages/work.html">Work</a></li>
-                    <li><a href="/pages/contact.html">Contact</a></li>
+                    <li><a href="/pages/shows">Shows</a></li>
+                    <li><a href="/pages/work">Work</a></li>
+                    <li><a href="/pages/contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
