--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,19 +19,19 @@
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
+                    <a class="nav-link" href="../index">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="shows.html">Shows</a>
+                        <a class="nav-link" href="shows">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="work.html">Work</a>
+                        <a class="nav-link" href="work">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact">Contact</a>
                 </li>                                   
             </ul>
         </div>
@@ -42,7 +42,7 @@
             <div>
                 <h1 class="page-heading">Contact Us</h1>
                 <p class="main-subheading-light">Feel free to contact us today!</p>   
-                <a class="main-button" href="about.html">Learn More<i class="fas fa-angle-right"></i></a>
+                <a class="main-button" href="about">Learn More<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </section>
@@ -100,11 +100,11 @@
             <div class="footer-pages">
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="shows.html">Shows</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index">Home</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="shows">Shows</a></li>
+                    <li><a href="work">Work</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
