add slashes to links

--- a/pages/about.html
+++ b/pages/about.html
@@ -19,19 +19,19 @@
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Home</a>
+                    <a class="nav-link" href="../index">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
+                        <a class="nav-link" href="about">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="shows.html">Shows</a>
+                        <a class="nav-link" href="shows">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="work.html">Work</a>
+                        <a class="nav-link" href="work">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" href="contact">Contact</a>
                 </li>                                   
             </ul>
         </div>
@@ -136,11 +136,11 @@
             <div class="footer-pages">
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="shows.html">Shows</a></li>
-                    <li><a href="work.html">Work</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="../index">Home</a></li>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/shows">Shows</a></li>
+                    <li><a href="/work">Work</a></li>
+                    <li><a href="/contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
