remove slashes from links

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -22,16 +22,16 @@
                     <a class="nav-link" href="../index">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
+                        <a class="nav-link" href="about">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="/shows">Shows</a>
+                        <a class="nav-link" href="shows">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="/work">Work</a>
+                        <a class="nav-link" href="work">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact</a>
+                        <a class="nav-link" href="contact">Contact</a>
                 </li>                                   
             </ul>
         </div>
@@ -101,10 +101,10 @@
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
                     <li><a href="../index">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/shows">Shows</a></li>
-                    <li><a href="/work">Work</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="shows">Shows</a></li>
+                    <li><a href="work">Work</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
