--- a/pages/about.html
+++ b/pages/about.html
@@ -137,10 +137,10 @@
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
                     <li><a href="../index">Home</a></li>
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/shows">Shows</a></li>
-                    <li><a href="/work">Work</a></li>
-                    <li><a href="/contact">Contact</a></li>
+                    <li><a href="about">About</a></li>
+                    <li><a href="shows">Shows</a></li>
+                    <li><a href="work">Work</a></li>
+                    <li><a href="contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
