add sections for shows layout

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -65,11 +65,37 @@
             </div>
         </div>
         <div class="show-two">
+            <div class="show-two-image position-relative">
+                <div class="skew-left"></div>
+            </div>
+            <div class="show-two-info">
+                <h2 class="main-heading">Parlour Magic</h2>
+                <p class="main-subheading">Is usually for an audience of up to 20 to 100 people. The show is usually 30 minutes long and involves a lot of audience participation. From mind reading to, making everyday objects levitate, and then money changing into different currencies and re-appearing in the most unexpected places. This show is guaranteed to entertain audiences of any age.</p>
+                <p class="main-subheading">Perfect for Small Gatherings, Private Parties, Birthday Parties, or Team Building events, as the mood will be set for the rest of day as guests converse over how the tricks may have been done</p>
+            </div>
+        </div>
+        <div class="show-three">
             <div>
-                
+                <h2 class="main-heading">Stage Show</h2>
+                <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long, and involves a dove act with a custom made soundtrack, as well as some of the best sleight of hand tricks and illusions that challenge logic! The show is perfect for any scenario where there are a lot of people. The show can be customized for your company, product, or special day and then promoted
+                        what needs to be advertised throughout the act!</p>
+            </div>
+            <div class="show-three-image position-relative">
+                <div class="skew-right"></div>
+            </div>
+        </div>
+    </section>
+    <!-- pricing section -->
+    <section id="pricing">
+        <div class="pricing-plans">
+            <div>
+
             </div>
             <div>
-                <p></p>
+
+            </div>
+            <div>
+                
             </div>
         </div>
     </section>
