add pricing plan styles for shows section

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -42,7 +42,7 @@
             <div>
                 <h1 class="page-heading">Our Shows</h1>
                 <p class="main-subheading-light">Find out which show is right for you.</p>   
-                <a class="main-button" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">Pricing<i class="fas fa-angle-down"></i></a>
+                <a class="main-button" href="#pricing">Pricing<i class="fas fa-angle-down"></i></a>
             </div>
         </div>
     </section>
@@ -87,15 +87,35 @@
     </section>
     <!-- pricing section -->
     <section id="pricing">
+        <div class="pricing-title">
+            <h2 class="main-heading">Pricing Plans</h2>
+            <p class="main-subheading">Every show has a customized price, so feel free to... </p>
+            <a class="secondary-button-two" href="contact">Contact Us<i class="fas fa-angle-right"></i></a>
+        </div>
+
         <div class="pricing-plans">
-            <div>
-
+            <div class="plan">
+                <h3 class="main-heading-small">Walk Around Magic</h3>
+                <ul class="list-style-none">
+                    <li>Night Clubs</li>
+                    <li>Restaurants</li>
+                    <li>Weddings (Cocktail Hour)</li>
+                    <li>Corporate Events</li>
+                </ul>
             </div>
-            <div>
-
+            <div class="plan">
+                <h3 class="main-heading-small">Parlour Magic</h3>
+                <ul class="list-style-none">
+                    <li>Private Events</li>
+                    <li>Team Building</li>
+                </ul>
             </div>
-            <div>
-                
+            <div class="plan">
+                 <h3 class="main-heading-small">Stage Show</h3>
+                 <ul class="list-style-none">
+                    <li>Corporate</li>
+                    <li>Wedding</li>
+                </ul>
             </div>
         </div>
     </section>
