--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar-section">
         <div class="navbar">
             <div class="logo-container">
-                    <p>Raman Illusions</p>
+                    <img class="logo" src="assets/raman-illusions-logo.png" width="40">
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
@@ -34,6 +34,30 @@
                         <a class="nav-link" href="pages/contact">Contact</a>
                 </li>                                   
             </ul>
+            <div class="navbar-mobile">
+                <a class="navbar-mobile-link" href="">
+                    <i class="fas fa-bars"></i>
+                </a>
+                <div class="navbar-mobile-contain">
+                    <ul class="navbar-mobile-links">
+                        <li class="nav-item">
+                            <a class="nav-link" href="/">Home</a>
+                        </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="pages/about">About</a>
+                        </li>
+                        <li class="nav-item">
+                                <a class="nav-link" href="pages/shows">Shows</a>
+                        </li>        
+                        <li class="nav-item">
+                                <a class="nav-link" href="pages/work">Work</a>
+                        </li>            
+                        <li class="nav-item">
+                                <a class="nav-link" href="pages/contact">Contact</a>
+                        </li>   
+                    </ul>
+                </div>
+            </div>
         </div>
     </nav>
     <!-- promo -->
