add media queries for hompage
media queries for mobile phones.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav class="navbar-section">
         <div class="navbar">
             <div class="logo-container">
-                    <img class="logo" src="assets/raman-illusions-logo.png" width="40">
+                    <img class="logo" src="assets/raman-illusions-logo.png" width="40" alt="Raman Sharma Magic Logo">
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
@@ -114,7 +114,7 @@
         </div>
         <div class="shows-container-three">
             <div class="position-relative">
-                <img class="shows-image" src="assets/crowd-participating-at-event.jpg">
+                <img class="shows-image" src="assets/crowd-participating-at-event.jpg" alt="Crowd Participating at Parlour Magic Event">
                 <div class="skew-two"></div>
             </div>
             <div class="shows-content">
@@ -134,7 +134,7 @@
                     </div>
                 </div>
                 <div class="position-relative">
-                    <img class="shows-image" src="assets/dove.jpeg">
+                    <img class="shows-image" src="assets/dove.jpeg" alt="A Single Dove in Nature">
                     <div class="skew-one"></div>
                 </div>
         </div>
