add correct navbar structure to each page

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
    <nav class="navbar-section">
         <div class="navbar">
             <div class="logo-container">
-                    <img class="logo" src="../assets/raman-illusions-logo.png" width="40" alt="Raman Sharma Magic Logo">
+                    <img class="logo" src="https://jaskiran-chhokar.github.io/raman-illusions/assets/raman-illusions-logo.png" width="40" alt="Raman Sharma Magic Logo">
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
