media queries for about page

--- a/pages/about.html
+++ b/pages/about.html
@@ -97,11 +97,11 @@
         </div>
         <div class="about-info-container">
             <div class="about-info container">
-                <div>
+                <div class="about-info-three">
                     <p class="main-subheading margin-bottom-one">After strolling many years in nightclubs and restaurants, he realized the type of magic that he wants to bring to the world! “Magic that is visual, daring, and that makes people smile, is something I strives for. I do my best to produce original material, or at least put my own twist on effects that may be similar to what I am doing”. </p>
                 </div>
             </div>
-            <div class="position-relative" style="background-image:url(../assets/about-image-four.jpg); height: 600px;">
+            <div class="position-relative about-info-three-image" style="background-image:url(../assets/about-image-four.jpg); height: 600px;">
                 <div class="skew-right"></div>
             </div>
         </div>
