--- a/pages/work.html
+++ b/pages/work.html
@@ -66,7 +66,7 @@
             <div>
                 <h1 class="page-heading">Our Work</h1>
                 <p class="main-subheading-light">Feel free to check out our latest works down below.</p>   
-                <a class="main-button" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">YouTube Channel<i class="fas fa-angle-right"></i></a>
+                <a class="main-button" href="https://www.youtube.com/user/RamanTvOfficial/videos" target="_blank">My YouTube<i class="fas fa-angle-right"></i></a>
             </div>
         </div>
     </section>
