--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
-                    <a class="nav-link" href="/">Home</a>
+                    <a class="nav-link fancy-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/about">About</a>
+                        <a class="nav-link fancy-link" href="pages/about">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/shows">Shows</a>
+                        <a class="nav-link fancy-link" href="pages/shows">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/work">Work</a>
+                        <a class="nav-link fancy-link" href="pages/work">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="pages/contact">Contact</a>
+                        <a class="nav-link fancy-link" href="pages/contact">Contact</a>
                 </li>                                   
             </ul>
             <div class="navbar-mobile">
