--- a/pages/work.html
+++ b/pages/work.html
@@ -19,19 +19,19 @@
             </div>
             <ul class="navbar-container">
                 <li class="nav-item">
-                    <a class="nav-link" href="../index">Home</a>
+                    <a class="nav-link fancy-link" href="../index">Home</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="about">About</a>
+                        <a class="nav-link fancy-link" href="about">About</a>
                 </li>
                 <li class="nav-item">
-                        <a class="nav-link" href="shows">Shows</a>
+                        <a class="nav-link fancy-link" href="shows">Shows</a>
                 </li>        
                 <li class="nav-item">
-                        <a class="nav-link" href="work">Work</a>
+                        <a class="nav-link fancy-link" href="work">Work</a>
                 </li>            
                 <li class="nav-item">
-                        <a class="nav-link" href="contact">Contact</a>
+                        <a class="nav-link fancy-link" href="contact">Contact</a>
                 </li>                                   
             </ul>
             <div class="navbar-mobile">
