Add video to homepage
Add video to homepage in shows section.

--- a/index.html
+++ b/index.html
@@ -133,8 +133,11 @@
                         <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
-                <div class="position-relative">
-                    <img class="shows-image" src="assets/dove.jpeg" alt="A Single Dove in Nature">
+                <div class="show-video-content position-relative">
+                    <video autoplay muted loop class="walk-around-video">
+                            <source src="assets/theatre.mp4" type="video/mp4"> 
+                    </video>
+                    <div class="show-video-overlay"></div>
                     <div class="skew-one"></div>
                 </div>
         </div>
