Add links to home and shows page

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -35,7 +35,7 @@
                 </li>                                   
             </ul>
             <div class="navbar-mobile">
-                <a class="navbar-mobile-link" href="">
+                <a class="navbar-mobile-link" href="#">
                     <i class="fas fa-bars"></i>
                 </a>
                 <div class="navbar-mobile-contain">
@@ -72,9 +72,9 @@
     </section>
     <!-- our shows -->
     <section>
-        <div class="show-one-title">
+        <div id="WalkAroundMagic" class="show-one-title">
             <h2 class="main-heading">Walk Around Magic</h2>
-            <a class="secondary-button-two" href="">Pricing<i class="fas fa-angle-down"></i></a>
+            <a class="secondary-button-two" href="#pricing">Pricing<i class="fas fa-angle-down"></i></a>
         </div>
         <div class="show-one">
             <div>
@@ -88,7 +88,7 @@
                 <div class="skew-right"></div>
             </div>
         </div>
-        <div class="show-two">
+        <div id="ParlourMagic" class="show-two">
             <div class="show-two-image position-relative">
                 <div class="skew-left"></div>
             </div>
@@ -98,7 +98,7 @@
                 <p class="main-subheading">Perfect for Small Gatherings, Private Parties, Birthday Parties, or Team Building events, as the mood will be set for the rest of day as guests converse over how the tricks may have been done</p>
             </div>
         </div>
-        <div class="show-three">
+        <div id="StageShow" class="show-three">
             <div>
                 <h2 class="main-heading">Stage Show</h2>
                 <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long, and involves a dove act with a custom made soundtrack, as well as some of the best sleight of hand tricks and illusions that challenge logic! The show is perfect for any scenario where there are a lot of people. The show can be customized for your company, product, or special day and then promoted
