--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Raman Illusions</title>
+    <meta name="description" content=""/>
+    <meta name="keywords" content="Toronto Magic, Toronto Magic Show, Illusions, Raman Sharma, Magic, Magician, Ontario Magic, Magic Show, Raman Sharma, Toronto, Brampton, Mississauga, GTA"/>
+    <title>Raman Illusions - Toronto Magic</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Nunito+Sans:300,400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
     crossorigin="anonymous" rel="stylesheet" >
@@ -35,7 +37,7 @@
                 </li>                                   
             </ul>
             <div class="navbar-mobile">
-                <a class="navbar-mobile-link" href="">
+                <a class="navbar-mobile-link" href="#">
                     <i class="fas fa-bars"></i>
                 </a>
                 <div class="navbar-mobile-contain">
@@ -70,8 +72,8 @@
               <h1>Raman Illusions</h1>
               <p>Breath, Entertain, Inspire.</p>
               <div class="container">
-                    <a class="main-button" href="">Learn More<i class="fas fa-angle-down"></i></a>
-                    <a class="secondary-button" href="">My Shows<i class="fas fa-angle-right"></i></a>
+                    <a class="main-button" href="#Shows">Learn More<i class="fas fa-angle-down"></i></a>
+                    <a class="secondary-button" href="/pages/shows">My Shows<i class="fas fa-angle-right"></i></a>
               </div> 
         </div>
     </header>
@@ -88,7 +90,7 @@
         <div class="about-background-two"></div>
     </section>
     <!-- shows -->
-    <section class="shows-section">
+    <section id="Shows" class="shows-section">
         <div class="shows-container-one">
             <div>
                 <h2 class="main-heading">Types of <span class="highlight-background">Shows</span></h2>
@@ -101,7 +103,7 @@
                 <div class="shows-content-inner">
                     <h3 class="main-heading-small">Walk Around Magic</h3>
                     <p class="main-subheading">Is the most interactive type of magic as it involves pure sleight of hand. This form of magic is the most difficult type as you are literally performing inches away from your audience. </p>
-                    <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
+                    <a class="secondary-button-two" href="pages/shows#WalkAroundMagic">More Details<i class="fas fa-angle-right"></i></a>
                 </div>
             </div>
             <div class="show-video-content position-relative">
@@ -121,7 +123,7 @@
                 <div class="shows-content-inner">
                         <h3 class="main-heading-small">Parlour Magic</h3>
                         <p class="main-subheading">Is usually for an audience of up to 20 to 100 people. The show is usually 30 minutes long and involves a lot of audience participation. </p>
-                        <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
+                        <a class="secondary-button-two" href="pages/shows#ParlourMagic">More Details<i class="fas fa-angle-right"></i></a>
                 </div>
             </div>
         </div>
@@ -130,7 +132,7 @@
                     <div class="shows-content-inner">
                         <h3 class="main-heading-small">Stage Show</h3>
                         <p class="main-subheading">Audiences ideally range from 200 to 2000 people. The show is 40 to 50 minutes long, and involves a dove act with a custom made soundtrack, as well as some of the best sleight of hand tricks and illusions that challenge logic!  </p>
-                        <a class="secondary-button-two" href="">More Details<i class="fas fa-angle-right"></i></a>
+                        <a class="secondary-button-two" href="pages/shows#StageShow">More Details<i class="fas fa-angle-right"></i></a>
                     </div>
                 </div>
                 <div class="show-video-content position-relative">
