Fix positioning of third video

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <p>Breath, Entertain, Inspire.</p>
               <div class="container">
                     <a class="main-button" href="#Shows">Learn More<i class="fas fa-angle-down"></i></a>
-                    <a class="secondary-button" href="/pages/shows">My Shows<i class="fas fa-angle-right"></i></a>
+                    <a class="secondary-button" href="pages/shows">My Shows<i class="fas fa-angle-right"></i></a>
               </div> 
         </div>
     </header>
@@ -186,10 +186,10 @@
                 <h3 class="footer-title">Pages</h3>
                 <ul class="footer-pages-list">
                     <li><a href="index">Home</a></li>
-                    <li><a href="/pages/about">About</a></li>
-                    <li><a href="/pages/shows">Shows</a></li>
-                    <li><a href="/pages/work">Work</a></li>
-                    <li><a href="/pages/contact">Contact</a></li>
+                    <li><a href="pages/about">About</a></li>
+                    <li><a href="pages/shows">Shows</a></li>
+                    <li><a href="pages/work">Work</a></li>
+                    <li><a href="pages/contact">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
